--- a/apps/teams-api/package.json
+++ b/apps/teams-api/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "test-app",
+  "name": "teams-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "pnpm nodemon ./src/index.ts",
-    "build": "webpack"
+    "start:dev": "pnpm nodemon src/index.ts",
+    "build": "pnpm webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2"
+  },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "nodemon": "^3.1.4",
-    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "express": "^4.19.2",
-    "test-lib": "link:..\\..\\libs\\test-lib"
+    "webpack-cli": "^5.1.4",
+    "ts-loader": "^9.5.1"
   }
 }
