--- a/apps/app-2/package.json
+++ b/apps/app-2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "host-app",
+  "name": "app-2",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-architects/module-federation": "18.0.4",
     "@angular/animations": "^17.3.0",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
@@ -22,7 +21,6 @@
     "@angular/router": "^17.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "webpack": "^5.93.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
